[gd_scene load_steps=20 format=3 uid="uid://dgj75ejd2a41x"]

[ext_resource type="Script" path="res://Scripts/Enemy/Veteran.gd" id="1_2qe2c"]
[ext_resource type="Texture2D" uid="uid://bxthekjgcp37q" path="res://Assets/Kenney_Tiny_Dungeon/Tiles/tile_0086.png" id="2_e26o2"]
[ext_resource type="Script" path="res://Scripts/Weapons/Weapons.gd" id="3_f17r2"]
[ext_resource type="PackedScene" uid="uid://csvlmla2104iq" path="res://Scenes/Weapons/enemy_big_sword.tscn" id="4_qmos4"]
[ext_resource type="Script" path="res://Scripts/States/StateGroup.gd" id="5_e23yf"]
[ext_resource type="Script" path="res://Scripts/States/StateIdleMovement.gd" id="5_oq30v"]
[ext_resource type="Script" path="res://Scripts/States/StateStaggered.gd" id="6_y7wuj"]
[ext_resource type="Script" path="res://Scripts/States/StateWeaponAttack.gd" id="8_4euol"]
[ext_resource type="Script" path="res://Scripts/States/StateMoving.gd" id="9_5qvno"]
[ext_resource type="Script" path="res://Scripts/Events/EventTakeKnockback.gd" id="11_e5mh0"]
[ext_resource type="Script" path="res://Scripts/Events/EventTakeDamage.gd" id="12_r7uyd"]
[ext_resource type="Script" path="res://Scripts/Events/EventTakeDeflect.gd" id="13_3r4j2"]
[ext_resource type="Script" path="res://Scripts/AI_States/AI_PositionAroundPlayer.gd" id="14_6lbwx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2631f"]
radius = 13.0

[sub_resource type="Animation" id="Animation_0na2m"]
length = 0.001
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [false],
"method": &"set_active_hurtbox"
}]
}

[sub_resource type="Animation" id="Animation_n4tr0"]
resource_name = "idle"
length = 0.75
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1), Vector2(0, 0), Vector2(0, -1), Vector2(0, 0), Vector2(0, -1), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapons/big_sword_root:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1), Vector2(0, 0), Vector2(0, -1), Vector2(0, 0), Vector2(0, -1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_oec8n"]
resource_name = "moving"
length = 0.5
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1), Vector2(0, 0), Vector2(0, -2), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapons/big_sword_root:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1), Vector2(0, 0), Vector2(0, -2), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.261799, -0.261799, 0.261799]
}

[sub_resource type="Animation" id="Animation_vp3k3"]
resource_name = "staggered"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.57079, 3.14159, 4.71238, 6.28318]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["enemy_hurt"],
"method": &"play_sound"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ec5ij"]
_data = {
"RESET": SubResource("Animation_0na2m"),
"idle": SubResource("Animation_n4tr0"),
"moving": SubResource("Animation_oec8n"),
"staggered": SubResource("Animation_vp3k3")
}

[node name="Veteran" type="CharacterBody2D" node_paths=PackedStringArray("graphics_parent", "anim_player", "attack_audio_player", "weapons")]
collision_layer = 2
script = ExtResource("1_2qe2c")
base_movement_speed = 0.7
graphics_parent = NodePath("CollisionShape2D")
anim_player = NodePath("AnimationPlayer")
attack_audio_player = NodePath("AudioStreamPlayer2D")
weapons = NodePath("Weapons")
hitbox_layer = 2
hurtbox_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2631f")

[node name="sprite_offset" type="Node2D" parent="CollisionShape2D"]
position = Vector2(0, -1)

[node name="Sprite2D" type="Sprite2D" parent="CollisionShape2D/sprite_offset"]
texture_filter = 1
texture_repeat = 1
scale = Vector2(1.25, 1.25)
texture = ExtResource("2_e26o2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ec5ij")
}

[node name="Weapons" type="Node2D" parent="." node_paths=PackedStringArray("actor", "current_weapon", "weapons")]
script = ExtResource("3_f17r2")
actor = NodePath("..")
current_weapon = NodePath("big_sword_root")
weapons = [NodePath("big_sword_root")]

[node name="big_sword_root" parent="Weapons" instance=ExtResource("4_qmos4")]

[node name="States" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("5_e23yf")
current_state = NodePath("idle")

[node name="idle" type="Node" parent="States"]
script = ExtResource("5_oq30v")

[node name="staggered" type="Node" parent="States"]
script = ExtResource("6_y7wuj")
on_stagger_attack_cd = 1.0
state_time_max = 0.5

[node name="StateMoving" type="Node" parent="States"]
script = ExtResource("9_5qvno")

[node name="StateWeaponAttack" type="Node" parent="States"]
script = ExtResource("8_4euol")

[node name="AI_States" type="Node" parent="."]

[node name="PositionBehind" type="Node" parent="AI_States"]
script = ExtResource("14_6lbwx")

[node name="Events" type="Node" parent="."]

[node name="take_knockback" type="Node" parent="Events"]
script = ExtResource("11_e5mh0")

[node name="take_damage" type="Node" parent="Events"]
script = ExtResource("12_r7uyd")

[node name="take_deflect" type="Node" parent="Events"]
script = ExtResource("13_3r4j2")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[editable path="Weapons/big_sword_root"]
